--- a/BalancoMensal/app/local.properties
+++ b/BalancoMensal/app/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Jun 06 10:26:29 BRT 2020
-sdk.dir=/home/fran/Android/Sdk
+#Sat Jun 13 10:19:30 BRT 2020
+sdk.dir=C\:\\Users\\morei\\AppData\\Local\\Android\\Sdk
